--- a/index.html
+++ b/index.html
@@ -208,5 +208,121 @@
         </div>
     </div>
 </div>
+
+<!-- Productos -->
+
+<div class="offer">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-2">
+                <img src="img/promo1.PNG" class="offer-img">
+            </div>
+            <div class="col-2">
+                <p>Disponible solo en el color Fucsa / 20% de descuento</p>
+                <h1>Willful - Reloj inteligente</h1>
+                <small>
+                    <p>
+                    Para hombre y mujer, versión 2020, resistente al agua, IP68,
+                     monitor de ritmo cardíaco, reloj digital deportivo, reloj 
+                     inteligente para teléfonos Android y iOS compatible con iPhone y 
+                     Samsung.
+                    </p>
+                </small>
+                <a href="" class="btn">Comprar &#8594;</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Testimonio -->
+
+<div class="Testimonio">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>
+                    Excelente Producto recomendable totalmente
+                </p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                </div>
+                <img src="img/comment1.jfif">
+                <h3>Maria Sanchez</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>
+                    Buen calidad y Precio
+                </p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <img src="img/comment2.jfif">
+                <h3>Jose Suarez</h3>
+            </div>
+            <div class="col-3">
+                <i class="fa fa-quote-left"></i>
+                <p>
+                    Es un buen Producto, y del color que buscaba
+                </p>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <img src="img/comment3.jfif">
+                <h3>Dr. Juan Morales</h3>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Marcas -->
+
+<div class="marcas">
+    <div class="small-container">
+        <div class="row">
+            <div class="col-5">
+                <img src="img/logo1.png"> 
+            </div>
+            <div class="col-5">
+                <img src="img/logo2.png"> 
+            </div>
+            <div class="col-5">
+                <img src="img/logo3.png"> 
+            </div>
+            <div class="col-5">
+                <img src="img/logo4.png"> 
+            </div>
+            <div class="col-5">
+                <img src="img/logo5.png"> 
+            </div>
+        </div>
+    </div>
+
+    <!--Footer-->
+
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+               <div class="footer-col-1">
+                   <h3>Descarga nuestra app</h3>
+                   <p>App disponible para celulares Android</p>
+               </div> 
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
