--- a/Login.html
+++ b/Login.html
@@ -24,9 +24,9 @@
         </div>
         <nav>
             <ul id="MenuItems">
-                <li><a href="">Home</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Acerca</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="src/views/partials/index.hbs">Productos</a></li>
+                <li><a href="#go-footer">Acerca</a></li>
                 <li><a href="">Contacto</a></li>
                 <li><a href="">Cuenta</a></li>
             </ul>
@@ -64,7 +64,7 @@
 </div>
 
     <!--Footer-->
-
+<div id=go-footer>
     <div class="footer">
         <div class="container">
             <div class="row">
@@ -93,6 +93,7 @@
         <hr>
         <p class="Copyright">Copyright 2020 - UP Store</p>
     </div>
+</div>
 
 <!-- js para el menu interactivo -->
   <script>
